=======
CHANGES
=======

3.7.4 (unreleased)
------------------

- Remove unneeded dependencies zope.app.component and zope.app.container

3.7.3 (2010-07-14)
------------------

- Apply refactoring from #153309.
- Fix LP bug 605057: ZCML links were no longer working (Guilherme Salgado)

3.7.2 (2010-03-07)
------------------

- Adapted tests for Python2.4


3.7.1 (2010-01-05)
------------------

- Updated tests to work with zope.publisher 3.12 (using zope.login).

3.7.0 (2009-12-22)
------------------

- Updated tests to work with latest zope.testing and use zope.browserpage in
  favor of zope.app.pagetemplate.

3.6.8 (2009-11-18)
------------------

- Updated the tests after moving IPossibleSite and ISite to zope.component.

3.6.7 (2009-09-29)
------------------

- Updated the tests after moving ITraverser back to zope.traversing.

3.6.6 (2009-09-15)
------------------

- Made the tests work again with the most recent Zope Toolkit KGS.

3.6.5 (2009-07-24)
------------------

- Update documentation file in ``zope.site`` from ``README.txt`` to
  ``site.txt``.

3.6.4 (2009-07-23)
------------------

- The ``IContained`` interface moved to ``zope.location.interfaces``. Make a
  test pass.

3.6.3 (2009-05-16)
------------------

- Explicitly defined default views.

- Replace relative url links with absolute ones.

- Added ``z3c`` packages to the code browser.

- Made `bin/static-apidoc` principially working (publisher and
  webserver mode). There are still some files which are not correctly
  fetched.

3.6.2 (2009-03-17)
------------------

- Adapt principal registry book chapter to a new place, as it was moved
  from zope.app.security to zope.principalregistry.

- Remove zcml slugs and old zpkg-related files.

3.6.1 (2009-02-04)
------------------

- When a module provides an interface or has an __all__ attribute,
  use one of those for the module documentation.  Fixes LP #323375.

- Undid broken link to `savepoint.txt` caused in 3.6.0.  The latest